--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			The way you take care of your parents;<br />
 			The way you baked cake ;<br />
 			<span class="comments">// And I'm sure one day you achieved all yours dreams.</span><br />
-			Thanks for motivating me also and Sorry if I said something wrong by mistake.;<br />
+			Thanks for motivating me and Sorry if I said something wrong by mistake;<br />
 			<br>
 			<br>
 			All I want to say is:<br />
