--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<br>
 			<br>
 			All I want to say is:<br />
-			You’re best best bestest;<br />
+			You’re best best bestest🧿🧿;<br />
 			<br>
 			<br>
 			Ab ro mat dena🫰🏻😂<br />
