--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<br>
 			<br>
 			Ab ro mat dena🫰🏻😂<br />
-			<br> Nazar🧿 lagane vale niche heart par click kare <br />
+			<br> Nazar lagane vale niche heart par click kare <br />
 			<br>
 			<span id="heartspan">
 			<a href="image.jpg"><i class="fas fa-heart" id="icon"></i></a>
